--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-HOST=192.168.15.7
+HOST=localhost
 PORT=4444
 
-DB_HOST=159.203.14.239
-DB_SCHEMA=IWF_ChallengeAuthenticationServer
-DB_USER=rootdb
-DB_PASSWORD=DF@services195-db
+DB_HOST=<db_host>
+DB_SCHEMA=<db_schema>
+DB_USER=<db_user>
+DB_PASSWORD=<db_password>
 
-JWT_SECRET=105ebabf-4983-4cce-8a0e-3c392d4770c2
+JWT_SECRET=<jwt_secret>
 
-EMAIL_SERVICE=gmail
-EMAIL_USER=seigas.gas@gmail.com
-EMAIL_PASSWORD=Seigas@17
+EMAIL_SERVICE=<email_service>
+EMAIL_USER=<email_user>
+EMAIL_PASSWORD=<email_password>
