--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.22.0",
-    "sequelize-typescript": "^1.1.0",
+    "sequelize": "^5.21.2",
+    "sequelize-typescript": "^1.0.0",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
@@ -45,8 +45,10 @@
     "@types/express": "^4.17.9",
     "@types/inversify": "^2.0.33",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^17.0.19",
     "@types/nodemailer": "^6.4.1",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.7.1",
     "node-sass": "^7.0.1",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
