--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.21.2",
-    "sequelize-typescript": "^1.0.0",
+    "sequelize": "^6.3.5",
+    "sequelize-typescript": "^2.0.0-beta.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
